[gd_scene load_steps=2 format=3 uid="uid://b54yxlywprrkk"]

[ext_resource type="Script" path="res://scenes/ResultsScreen.gd" id="1_koqq7"]

[node name="ResultsScreen" type="Node2D"]
script = ExtResource("1_koqq7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 385.0
offset_top = 285.0
offset_right = 695.0
offset_bottom = 435.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/PanelContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="Round" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Round:"

[node name="RoundCount" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"

[node name="Attempts" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Doors Opened:"

[node name="AttemptsCount" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "10"

[node name="Keys" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Keys Remaining:"

[node name="KeyCount" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1000"

[node name="Button" type="Button" parent="CanvasLayer/Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Go to Shop"

[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
